GObject: Fix code snippet in description of floating reference.

https://bugzilla.gnome.org/show_bug.cgi?id=688180